--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,6 +9,7 @@
     --bck-ground: #F5F4FA;
     --color-btn: #188CE8;
     --border: #ECECEC;
+    --border-portfolio: #EEEEEE;
 }
 
 *{
@@ -61,6 +62,11 @@ body{
 
 }
 
+.container-btn{
+    display: flex;
+    justify-content: center;
+}
+
 .logo, .logo-web{
     font-family: 'Raleway';
     font-style: normal;
@@ -101,8 +107,6 @@ body{
     align-items: baseline;
     gap: 50px;
     margin-left: auto;
-    margin-top: 32px;
-    margin-bottom: 32px;
 }
 
 .list-nav{
@@ -152,15 +156,9 @@ body{
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--color-white);
-    margin-top: 200px;
     margin-bottom: 30px;
 }
 
-.container-btn{
-    display: flex;
-    justify-content: center;
-    margin: 30px auto 200px auto;
-}
 
 .sec-button{
     font-family: "Roboto", sans-serif;
@@ -178,6 +176,7 @@ body{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     cursor: pointer;
+    justify-content: center;
 }
 .sec-button:hover,
 .sec-button:focus{
@@ -210,13 +209,13 @@ body{
 }
 
 .main-list-titel{
-    display: flex;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.1428;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--color-nav-link);
+    margin-bottom: 10px;
 }
 
 .main-list-par{
@@ -235,12 +234,9 @@ body{
     line-height: 1.1666;
     letter-spacing: 0.03em;
     color: var(--color-nav-link);
+    margin-bottom: 50px;
 }
 
-.doing{
-    padding-top: 0;
-    padding-bottom: 50px;
-}
 
 .container-doing{
     display: flex;
@@ -248,20 +244,21 @@ body{
     gap: 30px;
 }
 
-.section{
-    justify-content: center;
-    margin-top: 94px;
-    margin-bottom: 94px;
+.foto{
+    display: block;
+    max-width: 100%;
 }
 
-.section,.about{
+.section{
+    justify-content: center;
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.section.about{
     padding-top: 0;
 }
 
-.about-us{
-    padding-top: 94px;
-    padding-bottom: 50px;
-}
 
 .bck-ground{
     background: var(--bck-ground);
@@ -292,6 +289,8 @@ body{
 
 .about-person{
     font-weight: 500;
+    font-size: 16px;
+    line-height: 1.1875;
     color: var(--color-nav-link);
     margin-bottom: 10px;
 }
@@ -315,10 +314,6 @@ body{
 }
 
 
-.container-list-footer{
-    padding-bottom: 60px;
-}
-
 .foot-logo{
     font-family: 'Raleway';
     font-style: normal;
@@ -331,7 +326,7 @@ body{
     display: flex;
     justify-content: flex-start;
     margin-bottom: 20px;
-    display: block;
+    display: inline-block;
 }
 
 .foot-child:not(:last-child){
@@ -391,9 +386,8 @@ body{
     line-height: 2;
     letter-spacing: 0.06em;
     color: var(--color-nav-link);
-    padding-top: 20px;
-    padding-left: 24px;
-    padding-right: 24px;
+    margin-bottom: 4px;
+    
 }
 
 .portfolio-doing{
@@ -402,16 +396,14 @@ body{
     line-height: 1.875;
     letter-spacing: 0.03em;
     color: var(--color-gray);
-    padding-top: 5px;
-    padding-left: 24px;
-    padding-right: 24px;
-    padding-bottom: 20px;
+    
 }
 
 .container-filter-nav{
     display: flex;
     justify-content: center;
     gap: 8px;
+    margin-bottom: 34px;
 }
 
 .container-filter-foto{
@@ -419,10 +411,17 @@ body{
     flex-wrap: wrap;
     justify-content: center;
     gap: 30px;
-    padding-top: 35px;
 }
 
 .filter-border{
     background: var(--color-white);
-    border: 1px solid #EEEEEE;
+}
+
+.portfolio-common-styles{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 24px;
+    border-right: 1px solid var(--border-portfolio);
+    border-bottom: 1px solid var(--border-portfolio);
+    border-left: 1px solid var(--border-portfolio);
 }
