--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -62,10 +62,6 @@ body{
 
 }
 
-.container-btn{
-    display: flex;
-    justify-content: center;
-}
 
 .logo, .logo-web{
     font-family: 'Raleway';
@@ -139,6 +135,7 @@ body{
     background: var(--back-ground);
     padding-top: 200px;
     padding-bottom: 200px;
+    text-align: center;
 }
 
 .container-order{
@@ -165,10 +162,6 @@ body{
     font-weight: 700;
     font-size: 16px;
     line-height: 1.875;
-    height: 50px;
-    width: 216px;
-    left: 692px;
-    top: 430px;
     letter-spacing: 0.06em;
     color: var(--color-white);
     border: none;
@@ -177,6 +170,10 @@ body{
     border-radius: 4px;
     cursor: pointer;
     justify-content: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 32px;
+    padding-right: 32px;
 }
 .sec-button:hover,
 .sec-button:focus{
@@ -206,6 +203,7 @@ body{
     list-style: none;
     margin: 0;
     padding: 0;
+    flex-basis: calc((100% - 90px) / 4);
 }
 
 .main-list-titel{
@@ -250,7 +248,6 @@ body{
 }
 
 .section{
-    justify-content: center;
     padding-top: 94px;
     padding-bottom: 94px;
 }
@@ -275,6 +272,7 @@ body{
     background: var(--color-white);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+    flex-basis: calc((100% - 90px) / 4);
 }
 
 
@@ -403,7 +401,7 @@ body{
     display: flex;
     justify-content: center;
     gap: 8px;
-    margin-bottom: 34px;
+    margin-bottom: 50px;
 }
 
 .container-filter-foto{
@@ -415,12 +413,14 @@ body{
 
 .filter-border{
     background: var(--color-white);
+    flex-basis: calc((100% - 60px) / 3);
 }
 
 .portfolio-common-styles{
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 24px;
+    padding-right: 24px;
     border-right: 1px solid var(--border-portfolio);
     border-bottom: 1px solid var(--border-portfolio);
     border-left: 1px solid var(--border-portfolio);
